...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_conversion_absoluteWidth="211dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:entries="@array/select_dept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:onClick="proceed"
        android:text="proceed"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/spinner1"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

...
