...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/checkbooks"
        android:title="Check Books"/>
<item
    android:id="@+id/logout"
    android:title="Sign Out"/>


</menu>
